# build_inverted_index

./: .gitignore  CMakeLists.txt  varbyte_codec  varbyte_codec.cpp
src/: build_index.cpp  search_engine.cpp  varbyte_codec.cpp
